<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.magicthegatheringcounter.MainActivity">

    <LinearLayout
        android:id="@+id/playersLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/playerXLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="18dp">

                <TextView
                    android:id="@+id/playerX"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/player_x"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/playerXHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/playerX"
                    android:layout_marginLeft="16dp"
                    android:text="@string/player_xhp"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/currentXHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/playerX"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/playerXHP"
                    android:text="@string/current_xhp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/dividerX"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/currentXHP"
                    android:layout_alignTop="@id/currentXHP"
                    android:layout_margin="5dp"
                    android:layout_toRightOf="@id/currentXHP"
                    android:background="@android:color/black" />

                <TextView
                    android:id="@+id/maxXHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/playerX"
                    android:layout_toRightOf="@id/dividerX"
                    android:text="@string/current_xhp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/xHeartImg"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/maxXHP"
                    android:layout_alignTop="@id/maxXHP"
                    android:layout_toRightOf="@id/maxXHP"
                    android:src="@drawable/zelda_hp" />

                <LinearLayout
                    android:id="@+id/xHPButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/currentXHP"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/minusXButtons"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="minusFiveX"
                            android:text="@string/minusFive" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="minusTwoX"
                            android:text="@string/minusTwo" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="minusOneX"
                            android:text="@string/minusOne" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/plusXButtons"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="plusFiveX"
                            android:text="@string/plusFive" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="plusTwoX"
                            android:text="@string/plusTwo" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="plusOneX"
                            android:text="@string/plusOne" />
                    </LinearLayout>
                </LinearLayout>


                <TextView
                    android:id="@+id/manaX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/xHPButtons"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="18dp"
                    android:padding="6dp"
                    android:text="@string/playerMana"
                    android:textColor="@android:color/holo_blue_dark" />

                <ImageView
                    android:id="@+id/xManaImg"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_below="@+id/manaX"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mana_icons" />

                <TextView
                    android:id="@+id/currentXMana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/xManaImg"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:padding="13dp"
                    android:text="@string/xMana"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/xManaImg"
                    android:layout_toLeftOf="@id/currentXMana"
                    android:onClick="minusManaX"
                    android:text="@string/minus" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/xManaImg"
                    android:layout_toRightOf="@id/currentXMana"
                    android:onClick="plusManaX"
                    android:text="@string/plus" />
            </RelativeLayout>


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout
            android:id="@+id/playerYLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="18dp">

                <TextView
                    android:id="@+id/playerY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/player_y"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/playerYHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/playerY"
                    android:layout_marginLeft="16dp"
                    android:text="@string/player_yhp"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/currentYHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/playerY"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/playerYHP"
                    android:text="@string/current_yhp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/dividerY"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/currentYHP"
                    android:layout_alignTop="@id/currentYHP"
                    android:layout_margin="5dp"
                    android:layout_toRightOf="@id/currentYHP"
                    android:background="@android:color/black" />

                <TextView
                    android:id="@+id/maxYHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/playerY"
                    android:layout_toRightOf="@id/dividerY"
                    android:text="@string/current_yhp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/yHeartImg"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/maxYHP"
                    android:layout_alignTop="@id/maxYHP"
                    android:layout_toRightOf="@id/maxYHP"
                    android:src="@drawable/zelda_hp" />

                <LinearLayout
                    android:id="@+id/yHPButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/currentYHP"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/minusYButtons"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="minusFiveY"
                            android:text="@string/minusFive" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="minusTwoY"
                            android:text="@string/minusTwo" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="minusOneY"
                            android:text="@string/minusOne" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/plusYButtons"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="plusFiveY"
                            android:text="@string/plusFive" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="plusTwoY"
                            android:text="@string/plusTwo" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="plusOneY"
                            android:text="@string/plusOne" />
                    </LinearLayout>
                </LinearLayout>


                <TextView
                    android:id="@+id/manaY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/yHPButtons"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="18dp"
                    android:padding="6dp"
                    android:text="@string/playerMana"
                    android:textColor="@android:color/holo_blue_dark" />

                <ImageView
                    android:id="@+id/yManaImg"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_below="@+id/manaY"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mana_icons" />

                <TextView
                    android:id="@+id/currentYMana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/yManaImg"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:padding="13dp"
                    android:text="@string/yMana"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/yManaImg"
                    android:layout_toLeftOf="@id/currentYMana"
                    android:onClick="minusManaY"
                    android:text="@string/minus" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/yManaImg"
                    android:layout_toRightOf="@id/currentYMana"
                    android:onClick="plusManaY"
                    android:text="@string/plus" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/end_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="endMatch"
        android:text="@string/end_match" />

</RelativeLayout>